# church-encodings

./: README.md  church-encodings.cabal
src/: Encoding.hs
src/Encoding/: BoolChurch.hs  ListChurch.hs  NatChurch.hs  PairChurch.hs
test/: EncodingSpec.hs  Main.hs
test/Encoding/: BoolChurchSpec.hs  ListChurchSpec.hs  NatChurchSpec.hs  PairChurchSpec.hs
